package oop.assignment3.ex44.base;

/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Edelis Molina
 */

import java.util.List;

public class GeneralInfo {
    List<Product> products;
}
