package oop.assignment3.ex44.base;

/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Edelis Molina
 */

public class Product {
    String name;
    double price;
    int quantity;
}
